Added adapted code from original plugin.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -25,6 +25,6 @@
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
-
+        <editorFactoryListener implementation="youngstead.relativelinenumbers.EditorFactoryListenerImpl"/>
     </extensions>
 </idea-plugin>
