--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -6,7 +6,7 @@
     <!-- Public plugin name should be written in Title Case.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
     <name>Relative Line Numbers</name>
-    <version>0.1.0</version>
+    <version>0.2.0</version>
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
     <vendor>Bernardo J. C. Nunes</vendor>
@@ -15,7 +15,8 @@
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description><![CDATA[
-    <p>An updated and simplified version of @vayafulano's Relative Line Numbers plugin.</p>
+    <h2>Displays the line numbers relative to the caret's position.</h2>
+    <p>This project is a fork from @vayafulano's Relative Line Numbers plugin, updated and adapted to use the lastest IntelliJ Platform SDK.</p>
   ]]></description>
 
     <!-- Product and plugin compatibility requirements.
