--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -6,7 +6,8 @@
     <!-- Public plugin name should be written in Title Case.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
     <name>Relative Line Numbers</name>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
+    <idea-version since-build="212" until-build="223.*" />
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
     <vendor>Bernardo J. C. Nunes</vendor>
