--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -6,7 +6,7 @@
     <!-- Public plugin name should be written in Title Case.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
     <name>Relative Line Numbers</name>
-    <version>1.1.0</version>
+    <version>${project.version}</version>
     <idea-version since-build="222"/>
 
     <change-notes><![CDATA[
